@@ -1,3 +1,9 @@
+2002-07-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* expression.h: Make Scatterer and Stack implicitly convertible 
+	  to Term.
+	* expression.cpp : Ditto.
+
 2002-07-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* stack.cpp: Fix field in exit medium.
